--- a/roles/web/tasks/main.yml
+++ b/roles/web/tasks/main.yml
@@ -2,21 +2,26 @@
 # Playbook for Web Server
 
 - name: Install httpd and php
-  yum: name={{ item }} state=present
-  with_items:
-   - httpd
-   - php
-   - php-mysql
+  yum:
+    name: ['httpd', 'php', 'php-mysql']
+    state: present
 
 - name: Install web role specific dependencies
-  yum: name={{ item }} state=installed
-  with_items:
-   - git
+  yum:
+    name: ['git']
+    state: installed
 
 - name: Start & Enable Apache Server to start on boot
-  service: name=httpd state=started enabled=yes
+  service:
+    name: httpd
+    state: started
+    enabled: yes
 
 - name: Enable the firewall port for Apache
-  firewalld: port=80/tcp permanent=true state=enabled immediate=yes
+  firewalld:
+    port: 80/tcp
+    permanent: true
+    state: enabled
+    immediate: yes
     
 - include: copy_code.yml
