--- a/roles/common/tasks/main.yml
+++ b/roles/common/tasks/main.yml
@@ -1,13 +1,21 @@
 ---
 - name: Enable firewall on all the hosts
-  service: name=firewalld state=started enabled=yes
+  service:
+    name: firewalld
+    state: started
+    enabled: yes
 
 - name: Enable the firewall port for SSH
-  firewalld: port=22/tcp permanent=true state=enabled immediate=yes
+  firewalld:
+    port: 22/tcp
+    permanent: true
+    state: enabled
+    immediate: yes
 
 - name: Disallow password authentication
-  lineinfile: dest=/etc/ssh/sshd_config
-              regexp="^PasswordAuthentication"
-              line="PasswordAuthentication no"
-              state=present
+  lineinfile:
+    dest: /etc/ssh/sshd_config
+    regexp: "^PasswordAuthentication"
+    line: "PasswordAuthentication no"
+    state: present
   notify: restart ssh
