--- a/roles/web/tasks/copy_code.yml
+++ b/roles/web/tasks/copy_code.yml
@@ -3,10 +3,17 @@
 # the version control system.
 
 - name: Copy the code from repository
-  git: repo={{ repository }} dest=/var/www/html/ force=yes
+  git:
+    repo: "{{ repository }}"
+    dest: /var/www/html/
+    force: yes
 
 - name: Creates the index.php file
-  template: src=index.php.j2 dest=/var/www/html/index.php
-  
+  template:
+    src: index.php.j2
+    dest: /var/www/html/index.php
+
 - name: Delete index.html if exists
-  file: path=/var/www/html/index.html state=absent
+  file:
+    path: /var/www/html/index.html
+    state: absent
